fix: clean /var/log

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -292,6 +292,7 @@ RUN \
     /root/.npm \
     /tmp/* \
     /usr/share/keyrings/nodesource-repo.gpg \
+    /var/log \
     /var/tmp/* \
     /var/lib/apt/lists/*
 
