fix(all): remove only files from /var/log

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -291,7 +291,7 @@ RUN \
     /root/.npm \
     /tmp/* \
     /usr/share/keyrings/nodesource-repo.gpg \
-    /var/log \
+    /var/log/* \
     /var/tmp/* \
     /var/lib/apt/lists/*
 
