fix(all): clarify supported architectures

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -332,9 +332,9 @@ RUN \
     /root/.npm \
     /tmp/* \
     /usr/share/keyrings/nodesource-repo.gpg \
+    /var/lib/apt/lists/* \
     /var/log/* \
-    /var/tmp/* \
-    /var/lib/apt/lists/*
+    /var/tmp/*
 
 # copy local files
 COPY root/ /
