fix: build metadata

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -4,6 +4,16 @@ FROM ghcr.io/martabal/baseimage-ubuntu:noble
 
 # set version label
 ARG BUILD_DATE
+ARG BUILD_ID
+ARG BUILD_IMAGE
+ARG BUILD_IMAGE_URL
+ARG BUILD_REPOSITORY
+ARG BUILD_REPOSITORY_URL
+ARG BUILD_SOURCE_COMMIT
+ARG BUILD_SOURCE_REF
+ARG BUILD_SOURCE_URL
+ARG BUILD_URL
+
 ARG IMMICH_VERSION
 
 # hadolint ignore=DL3048
@@ -25,9 +35,18 @@ ENV \
   {% else -%}
   IMMICH_MACHINE_LEARNING_ENABLED="false" \
   {% endif -%}
+  IMMICH_BUILD=${BUILD_ID} \
+  IMMICH_BUILD_IMAGE=${BUILD_IMAGE} \
+  IMMICH_BUILD_IMAGE_URL=${BUILD_IMAGE_URL} \
+  IMMICH_BUILD_URL=${BUILD_URL} \
   IMMICH_MEDIA_LOCATION="/photos" \
   IMMICH_PORT="8080" \
+  IMMICH_REPOSITORY=${BUILD_REPOSITORY} \
+  IMMICH_REPOSITORY_URL=${BUILD_REPOSITORY_URL} \
   IMMICH_REVERSE_GEOCODING_ROOT="/app/immich/geodata" \
+  IMMICH_SOURCE_COMMIT=${BUILD_SOURCE_COMMIT} \
+  IMMICH_SOURCE_REF=${BUILD_SOURCE_REF} \
+  IMMICH_SOURCE_URL=${BUILD_SOURCE_URL} \
   IMMICH_WEB_ROOT="/app/immich/server/www" \
   NVIDIA_DRIVER_CAPABILITIES="compute,video,utility"
 
