--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -43,7 +43,7 @@ ENV \
   IMMICH_PORT="8080" \
   IMMICH_REPOSITORY=${BUILD_REPOSITORY} \
   IMMICH_REPOSITORY_URL=${BUILD_REPOSITORY_URL} \
-  IMMICH_REVERSE_GEOCODING_ROOT="/app/immich/geodata" \
+  IMMICH_REVERSE_GEOCODING_ROOT="/app/immich/server/geodata" \
   IMMICH_SOURCE_COMMIT=${BUILD_SOURCE_COMMIT} \
   IMMICH_SOURCE_REF=${BUILD_SOURCE_REF} \
   IMMICH_SOURCE_URL=${BUILD_SOURCE_URL} \
@@ -60,7 +60,7 @@ RUN \
     {% if machine_learning_provider == "armnn" -%}
     /etc/OpenCL/vendors \
     {% endif -%}
-    /app/immich/{cli,geodata,{% if machine_learning_provider -%}machine-learning/ann,{% if machine_learning_provider == "armnn"-%}armnn,{% endif -%}{% endif -%}server/www} \
+    /app/immich/{cli,{% if machine_learning_provider -%}machine-learning/ann,{% if machine_learning_provider == "armnn"-%}armnn,{% endif -%}{% endif -%}server/geodata,server/www} \
     /tmp/{immich-dependencies,immich,node_modules{% if machine_learning_provider == "armnn"-%},armnn{% endif -%}} && \
   echo "**** install build packages ****" && \
   echo "deb [signed-by=/usr/share/keyrings/nodesource-repo.gpg] https://deb.nodesource.com/node_20.x nodistro main" >>/etc/apt/sources.list.d/node.list && \
@@ -181,20 +181,23 @@ RUN \
   ./build-libraw.sh && \
   ./build-imagemagick.sh && \
   ./build-libvips.sh && \
+  mv \
+    /tmp/immich-dependencies/server/bin/build-lock.json \
+    /app/immich/server && \
   echo "**** download geocoding data ****" && \
   curl -o \
     /tmp/cities500.zip -L \
     "https://download.geonames.org/export/dump/cities500.zip" && \
   curl -o \
-    /app/immich/geodata/admin1CodesASCII.txt -L \
+    /app/immich/server/geodata/admin1CodesASCII.txt -L \
     "https://download.geonames.org/export/dump/admin1CodesASCII.txt" && \
   curl -o \
-    /app/immich/geodata/admin2Codes.txt -L \
+    /app/immich/server/geodata/admin2Codes.txt -L \
     "https://download.geonames.org/export/dump/admin2Codes.txt" && \
   unzip \
     /tmp/cities500.zip -d \
-    /app/immich/geodata && \
-  date --iso-8601=seconds | tr -d "\n" > /app/immich/geodata/geodata-date.txt && \
+    /app/immich/server/geodata && \
+  date --iso-8601=seconds | tr -d "\n" > /app/immich/server/geodata/geodata-date.txt && \
   echo "**** download immich ****" && \
   if [ -z ${IMMICH_VERSION} ]; then \
     IMMICH_VERSION=$(curl -sL https://api.github.com/repos/immich-app/immich/releases/latest | \
