--- a/templates/svc-machine-learning/run.j2
+++ b/templates/svc-machine-learning/run.j2
@@ -10,7 +10,7 @@
 {% if machine_learning_provider -%}
 {% if machine_learning_provider != "openvino" -%}
 lib_path="/usr/lib/$(arch)-linux-gnu/libmimalloc.so.2"
-export LD_PRELOAD="$lib_path"
+export LD_PRELOAD="${lib_path}"
 {% endif -%}
 {% if machine_learning_provider == "armnn" -%}
 LD_LIBRARY_PATH="/app/immich/armnn"
@@ -20,11 +20,11 @@ export MPLCONFIGDIR="/tmp"
 export HF_HOME="/tmp"
 
 exec \
-    cd /app/immich/machine-learning s6-setuidgid abc \
-       gunicorn app.main:app \
-        -k uvicorn.workers.UvicornWorker \
-        -w "${MACHINE_LEARNING_WORKERS:=1}" \
-        -b "${MACHINE_LEARNING_HOST:-"0.0.0.0"}":"${MACHINE_LEARNING_PORT:-"3003"}" \
-        -t "${MACHINE_LEARNING_WORKER_TIMEOUT:=120}" \
-        --log-config-json log_conf.json \
-        --graceful-timeout 0 || exit
+  cd /app/immich/machine-learning s6-setuidgid abc \
+  gunicorn app.main:app \
+    -k uvicorn.workers.UvicornWorker \
+    -w "${MACHINE_LEARNING_WORKERS:-1}" \
+    -b "${MACHINE_LEARNING_HOST:-"0.0.0.0"}":"${MACHINE_LEARNING_PORT:-"3003"}" \
+    -t "${MACHINE_LEARNING_WORKER_TIMEOUT:-120}" \
+    --log-config-json log_conf.json \
+    --graceful-timeout 0 || exit
