--- a/templates/svc-machine-learning/run.j2
+++ b/templates/svc-machine-learning/run.j2
@@ -25,6 +25,6 @@ exec \
     -k uvicorn.workers.UvicornWorker \
     -w "${MACHINE_LEARNING_WORKERS:-1}" \
     -b "${MACHINE_LEARNING_HOST:-"0.0.0.0"}":"${MACHINE_LEARNING_PORT:-"3003"}" \
-    -t "${MACHINE_LEARNING_WORKER_TIMEOUT:-120}" \
+    -t "${MACHINE_LEARNING_WORKER_TIMEOUT:-{% if machine_learning_provider == "openvino" -%}300{% else %}120{% endif -%}}" \
     --log-config-json log_conf.json \
     --graceful-timeout 0 || exit
