--- a/templates/svc-machine-learning/run.j2
+++ b/templates/svc-machine-learning/run.j2
@@ -27,4 +27,5 @@ exec \
     -b "${MACHINE_LEARNING_HOST:-"0.0.0.0"}":"${MACHINE_LEARNING_PORT:-"3003"}" \
     -t "${MACHINE_LEARNING_WORKER_TIMEOUT:-{% if machine_learning_provider == "openvino" -%}300{% else %}120{% endif -%}}" \
     --log-config-json log_conf.json \
+    --keep-alive "${MACHINE_LEARNING_HTTP_KEEPALIVE_TIMEOUT_S:-2}" \
     --graceful-timeout 0 || exit
