--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -17,6 +17,8 @@ ARG BUILD_URL
 ARG IMMICH_VERSION
 ARG IMMICH_BASE_IMAGE_TAG
 
+ARG LATEST_UBUNTU_VERSION="oracular"
+
 # hadolint ignore=DL3048
 LABEL build_version="Build-date:- ${BUILD_DATE}"
 LABEL maintainer="martabal"
@@ -65,6 +67,13 @@ RUN \
   echo "deb [signed-by=/usr/share/keyrings/deadsnakes.gpg] https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu noble main" >>/etc/apt/sources.list.d/deadsnakes.list && \
   curl -s "https://keyserver.ubuntu.com/pks/lookup?op=get&search=0xF23C5A6CF475977595C89F51BA6932366A755776" | gpg --dearmor | tee /usr/share/keyrings/deadsnakes.gpg >/dev/null && \
   {% endif -%}
+  if [ $(arch) = "x86_64" ]; then \
+    UBUNTU_REPO="http://archive.ubuntu.com/ubuntu/"; \
+  else \
+    UBUNTU_REPO="http://ports.ubuntu.com/ubuntu-ports/"; \
+  fi && \
+  printf "deb ${UBUNTU_REPO} ${LATEST_UBUNTU_VERSION} main restricted universe multiverse\ndeb-src ${UBUNTU_REPO} ${LATEST_UBUNTU_VERSION} main restricted universe multiverse" >> /etc/apt/sources.list && \
+  printf "Package: *\nPin: release n=${LATEST_UBUNTU_VERSION}\nPin-Priority: 450" > /etc/apt/preferences.d/preferences && \
   apt-get update && \
   apt-get install --no-install-recommends -y \
     autoconf \
@@ -79,7 +88,6 @@ RUN \
     libglib2.0-dev \
     libgsf-1-dev \
     libjpeg-dev \
-    libjxl-dev \
     libltdl-dev \
     liborc-0.4-dev \
     librsvg2-dev \
@@ -89,6 +97,8 @@ RUN \
     meson \
     pkg-config \
     unzip && \
+  apt-get install --no-install-recommends -y -t ${LATEST_UBUNTU_VERSION} \
+    libjxl-dev && \
   echo "**** install runtime packages ****" && \
   apt-get install --no-install-recommends -y \
     {% if machine_learning_provider == "cuda" -%}
@@ -107,7 +117,6 @@ RUN \
     libgomp1 \
     libgsf-1-114 \
     libio-compress-brotli-perl \
-    libjxl0.7 \
     liblcms2-2 \
     liblqr-1-0 \
     libltdl7 \
@@ -143,6 +152,8 @@ RUN \
     python3-pip \
     {% endif -%}
     zlib1g && \
+  apt-get install --no-install-recommends -y -t ${LATEST_UBUNTU_VERSION} \
+    libjxl0.10 && \
   if [ $(arch) = "x86_64" ]; then \
     echo "**** install intel dependencies ****" && \
     apt-get install --no-install-recommends -y \
