feat: third party

--- a/templates/Dockerfile.j2
+++ b/templates/Dockerfile.j2
@@ -14,6 +14,12 @@ ARG BUILD_SOURCE_REF
 ARG BUILD_SOURCE_URL
 ARG BUILD_URL
 
+# set third party label
+ARG THIRD_PARTY_BUG_FEATURE_URL
+ARG THIRD_PARTY_DOCUMENTATION_URL
+ARG THIRD_PARTY_SOURCE_URL
+ARG THIRD_PARTY_SUPPORT_URL
+
 ARG IMMICH_VERSION
 ARG IMMICH_BASE_IMAGE_TAG
 
@@ -46,6 +52,10 @@ ENV \
   IMMICH_SOURCE_COMMIT=${BUILD_SOURCE_COMMIT} \
   IMMICH_SOURCE_REF=${BUILD_SOURCE_REF} \
   IMMICH_SOURCE_URL=${BUILD_SOURCE_URL} \
+  IMMICH_THIRD_PARTY_BUG_FEATURE_URL=${THIRD_PARTY_BUG_FEATURE_URL} \
+  IMMICH_THIRD_PARTY_DOCUMENTATION_URL=${THIRD_PARTY_DOCUMENTATION_URL} \
+  IMMICH_THIRD_PARTY_SOURCE_URL=${THIRD_PARTY_SOURCE_URL} \
+  IMMICH_THIRD_PARTY_SUPPORT_URL=${THIRD_PARTY_SUPPORT_URL} \
   NVIDIA_DRIVER_CAPABILITIES="compute,video,utility"
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
